tests/fail/validity/invalid_bool_uninit.stderr
error: Undefined Behavior: using uninitialized data, but this operation requires initialized memory
  --> $DIR/invalid_bool_uninit.rs:LL:CC
   |
LL |     let _b = unsafe { MyUninit { init: () }.uninit };
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ using uninitialized data, but this operation requires initialized memory
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
   = note: BACKTRACE:
   = note: inside `main` at $DIR/invalid_bool_uninit.rs:LL:CC

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

